--- a/css/style.css
+++ b/css/style.css
@@ -932,7 +932,7 @@ body {
     margin: 0 0 15px 0;
     text-transform: uppercase;
     font-size: 5rem; }
-    @media (max-width: 768px) and (min-width: 1024px) {
+    @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
       #hero .hero-slogan {
         font-size: 4.5rem; } }
     #hero .hero-slogan p {
